# zkemail-cairo

./: .gitignore  .python-version  Cargo.toml  Makefile  README.md  base64.cairo  build.rs  compile.sh  compiled.json  email.eml  extract.cairo  format.sh  gen.py  kar.py  kar1.py  main.cairo  pkcs1_v1_5.cairo  program_input.json  pubkeydns.py  random.json  rsa_script.py  run.sh  setup.sh  sha256.cairo  sha_compiled.json  test.py  uint1024.cairo  uint2048.cairo  uint256.cairo  uint4096.cairo  uint512.cairo  verify_dkim.py
.github/workflows/: zkemail-cairo-ci.yaml
src/: dkim.rs  main.rs
src/dkim/: body.rs  headers.rs  mod.rs  tests.rs
src/hint_processor/: input.rs  mod.rs  output.rs
src/hint_processor/hints/: advice.rs  mod.rs  sha256.rs  u1024.rs  u2048.rs  u256.rs  u512.rs  vars.rs
src/tests/: mod.rs
src/types/: mod.rs
