[package]
name = "cairo-rsa"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
cairo-type-derive = { git = "https://github.com/keep-starknet-strange/snos.git", rev = "35a300a10d2107482ada440b5025ee2f651afbd4" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "62804bcbf58b436a8986e7da0ee80333400b1ffb", features = ["extensive_hints", "clap", "cairo-1-hints"] }
tokio = { version = "1.16", features = ["full"] }
mail-auth = { path = "../cairo-dkim/mail-auth"}
regex = "1.11.1"
rsa = "0.9.7"
base64 = "0.22.1"
serde = "1.0.215"
serde_json = "1.0.132"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0.64"