[package]
name = "zkemail-cairo"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
cairo-type-derive = { git = "https://github.com/keep-starknet-strange/snos.git", rev = "e4599fe859955f6763f51306605b88e7967f40b2" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", tag = "v1.0.2", features = ["extensive_hints", "clap", "cairo-1-hints"] }
cfdkim = { git = "https://github.com/Okm165/dkim.git" }
clap = { version = "4.3.10", features = ["derive"] }
generic-array = { version = "0.14.7", default-features = false }
mailparse = "0.14"
num-bigint = { version = "0.4.6", features = ["serde"] }
num-integer = "0.1.46"
regex = "1.11.1"
rsa = "0.9.7"
serde = "1.0.215"
serde_json = "1.0.132"
serde_with = "3.12.0"
sha2 = { version = "0.10.7", features = ["compress"], default-features = false }
slog = "2.7.0"
thiserror = "1.0.64"
tokio = { version = "1.16", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trust-dns-resolver = "0.23.2"

[dev-dependencies]
rand_chacha = "0.3.1"